В работе header body

--- a/public/index.css
+++ b/public/index.css
@@ -103,21 +103,42 @@ a {
   font-display: swap;
 }
 body {
+  color: #1E1B1B;
   font-family: Manrope;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
 }
 
 .container {
-  width: 1280px;
+  max-width: 1280px;
+  padding: 0 15px;
   margin: 0 auto;
+  height: 100%;
+}
+
+.button {
+  background: #FF6433;
+  border-radius: 12px;
+  padding: 16px 40px;
+  display: inline-block;
+  transition: all 0.3s;
+}
+.button:hover {
+  transform: scale(1.05);
 }
 
 .header__top-inner {
   width: 100%;
   display: flex;
-  margin-top: 18px;
+  padding: 18px 0;
   align-items: center;
 }
 
+.header {
+  position: relative;
+  padding-bottom: 135px;
+}
 .header__logo {
   margin-right: auto;
 }
@@ -136,6 +157,10 @@ body {
   font-style: normal;
   font-weight: 600;
   line-height: 28px;
+  transition: all 0.3s;
+}
+.header__nav a:hover {
+  color: #FF6433;
 }
 .header__line {
   margin: 0 32px;
@@ -144,7 +169,6 @@ body {
   width: 1px;
   background-color: rgba(147, 145, 145, 0.3607843137);
 }
-
 .header__contact {
   margin-left: 44px;
   position: relative;
@@ -163,6 +187,10 @@ body {
   font-style: normal;
   font-weight: 600;
   line-height: 175%;
+  transition: all 0.3s;
+}
+.header__contact-tel:hover {
+  color: #FF6433;
 }
 .header__contact::after {
   content: "";
@@ -172,6 +200,112 @@ body {
   top: 7px;
   left: -54px;
   background: url("../images/icon/green phone.svg") no-repeat;
+}
+.header__body {
+  margin: 80px 0 135px;
+}
+.header__body-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__content {
+  width: 625px;
+}
+.header__titel {
+  font-size: 64px;
+  font-weight: 800;
+  line-height: 84px;
+  letter-spacing: -1.92px;
+  margin-bottom: 40px;
+  width: 625px;
+}
+.header__btn-box {
+  margin-bottom: 48px;
+}
+.header__btn {
+  color: #FFF;
+  font-size: 18px;
+  line-height: 175%;
+  margin-right: 33px;
+}
+.header__btn--transp {
+  color: #1E1B1B;
+  font-weight: 500;
+  font-size: 16px;
+  padding: 24px 16px 24px 48px;
+  border-radius: 12px;
+  position: relative;
+  transition: all 0.3s;
+  display: inline-block;
+}
+.header__btn--transp::after {
+  content: "";
+  height: 24px;
+  width: 24px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 16px;
+  position: absolute;
+  background: url("../images/icon/Play black.svg");
+}
+.header__btn--transp:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px 1px #FF6433;
+}
+.header__status {
+  margin-left: 45px;
+  position: relative;
+}
+.header__status::after {
+  content: "";
+  height: 31px;
+  width: 31px;
+  top: 12px;
+  left: -44px;
+  position: absolute;
+  background: url("../images/icon/clock.svg");
+}
+.header__status-open {
+  color: #939191;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+}
+.header__status-work {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 175%;
+}
+.header__img-box {
+  position: relative;
+}
+.header__info-box {
+  position: absolute;
+  top: 81px;
+  left: -30px;
+  display: flex;
+  height: 102px;
+  width: 282px;
+  border-radius: 59px;
+  background: #FFF;
+  box-shadow: 0px 0px 0px 12px rgba(225, 225, 225, 0.262745098);
+}
+.header__info-box span {
+  margin-left: 98px;
+  align-self: center;
+  position: relative;
+}
+.header__info-box span::after {
+  content: "";
+  top: 0;
+  left: -85px;
+  position: absolute;
+  height: 70px;
+  width: 71px;
+  transform: translateY(calc(-50% + 12px));
+  display: block;
+  background: url("../images/icon/quick.svg") no-repeat;
 }
 
 /*# sourceMappingURL=index.css.map */
