--- a/public/index.css
+++ b/public/index.css
@@ -307,5 +307,35 @@ body {
   display: block;
   background: url("../images/icon/quick.svg") no-repeat;
 }
+.header__rate-box {
+  display: flex;
+  position: absolute;
+  bottom: 65px;
+  right: -25px;
+  height: 102px;
+  width: 325px;
+  border-radius: 59px;
+  background: #FFF;
+  box-shadow: 0px 0px 0px 12px rgba(225, 225, 225, 0.262745098);
+  align-items: center;
+}
+.header__rate-item {
+  margin-left: 38px;
+}
+.header__rate-item:last-child {
+  margin-left: 15px;
+}
+.header__rate-num {
+  color: #000;
+  line-height: 36px;
+  letter-spacing: -0.72px;
+}
+.header__rate-name {
+  color: #000;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  opacity: 0.7;
+}
 
 /*# sourceMappingURL=index.css.map */
