--- a/style/index.scss
+++ b/style/index.scss
@@ -252,4 +252,43 @@ body {
     }
   }
 
+  &__rate-box {
+    display: flex;
+    position: absolute;
+    bottom: 65px;
+    right: -25px;
+    height: 102px;
+    width: 325px;
+    border-radius: 59px;
+    background: #FFF;
+    box-shadow: 0px 0px 0px 12px #e1e1e143;
+    align-items: center;
+
+
+
+
+
+  }
+
+  &__rate-item {
+    margin-left: 38px;
+
+    &:last-child {
+      margin-left: 15px;
+    }
+  }
+
+  &__rate-num {
+    color: #000;
+    line-height: 36px;
+    letter-spacing: -0.72px;
+  }
+
+  &__rate-name {
+    color: #000;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    opacity: 0.7;
+  }
 }
