--- a/public/index.css
+++ b/public/index.css
@@ -118,14 +118,21 @@ body {
 }
 
 .button {
+  color: #FFF;
   background: #FF6433;
   border-radius: 12px;
   padding: 16px 40px;
   display: inline-block;
+  font-size: 18px;
+  line-height: 175%;
   transition: all 0.3s;
 }
 .button:hover {
   transform: scale(1.05);
+}
+
+.title--center {
+  text-align: center;
 }
 
 .header__top-inner {
@@ -223,9 +230,6 @@ body {
   margin-bottom: 48px;
 }
 .header__btn {
-  color: #FFF;
-  font-size: 18px;
-  line-height: 175%;
   margin-right: 33px;
 }
 .header__btn--transp {
@@ -365,7 +369,6 @@ body {
   font-weight: 800;
   line-height: 76px;
   letter-spacing: -1.74px;
-  text-align: center;
 }
 
 .offer__grid {
@@ -415,6 +418,83 @@ body {
 .offer__link-about:hover svg path {
   fill: #FF6433;
   transition: all 0.3s;
+}
+
+.main__follow {
+  padding: 134px 0;
+}
+
+.follow__inner {
+  display: flex;
+}
+.follow__inner-steps {
+  display: flex;
+  flex-direction: column;
+}
+.follow__steps-item {
+  display: flex;
+  margin-bottom: 16px;
+}
+.follow__steps-num {
+  color: #FFF;
+  display: flex;
+  height: 72px;
+  width: 72px;
+  background-color: #661CE7;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 24px;
+  position: relative;
+  margin-right: 24px;
+}
+.follow__steps-num::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 15px;
+  height: 42px;
+  width: 42px;
+  background-color: rgba(255, 255, 255, 0.2392156863);
+  border-radius: 50%;
+  transform: translateY(50%);
+}
+.follow__steps-num span {
+  display: block;
+  position: absolute;
+  bottom: -83px;
+  right: 36px;
+  height: 71px;
+  width: 0;
+  border-left: 3px dashed #FF6433;
+}
+.follow__steps-name {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -0.96px;
+  margin-bottom: 8px;
+}
+.follow__steps-text {
+  width: 335px;
+  font-size: 18px;
+  line-height: 175%;
+  opacity: 0.6;
+}
+
+.heading__title {
+  max-width: 525px;
+  margin-bottom: 16px;
+}
+
+.heading__follow-text {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 28px;
+  opacity: 0.6;
+  margin-bottom: 32px;
 }
 
 /*# sourceMappingURL=index.css.map */
