--- a/style/index.scss
+++ b/style/index.scss
@@ -21,15 +21,22 @@ body {
 
 
 .button {
+  color: #FFF;
   background: #FF6433;
   border-radius: 12px;
   padding: 16px 40px;
   display: inline-block;
+  font-size: 18px;
+  line-height: 175%;
   @include transition;
 
   &:hover {
     transform: scale(1.05);
   }
+}
+
+.title--center {
+  text-align: center;
 }
 
 // ====================HEADER=============================
@@ -156,9 +163,7 @@ body {
   }
 
   &__btn {
-    color: #FFF;
-    font-size: 18px;
-    line-height: 175%;
+
     margin-right: 33px;
 
     &--transp {
@@ -323,11 +328,9 @@ body {
     font-weight: 800;
     line-height: 76px;
     letter-spacing: -1.74px;
-    text-align: center;
   }
+
 }
-
-
 
 .offer__grid {
   display: grid;
@@ -349,8 +352,6 @@ body {
     align-items: center;
     justify-content: center;
     transition: all .3s;
-
-    & span {}
 
     & svg {
       margin-bottom: 15px;
@@ -389,6 +390,109 @@ body {
 
   &:hover svg path {
     fill: #FF6433;
-      transition: all .3s;
+    transition: all .3s;
   }
+}
+
+// ====================FOLLOW=============================
+
+.main__follow {
+  padding: 134px 0;
+}
+
+.follow {
+
+  &__inner {
+    display: flex;
+
+    &-info {}
+
+    &-steps {
+      display: flex;
+      flex-direction: column;
+
+    }
+  }
+
+  &__heading {}
+
+  &__btn {}
+
+  &__heading {}
+
+  &__steps-item {
+    display: flex;
+    margin-bottom: 16px;
+  }
+
+  &__steps-num {
+    color: #FFF;
+    display: flex;
+    height: 72px;
+    width: 72px;
+    background-color: #661CE7;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 24px;
+    position: relative;
+    margin-right: 24px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      right: 15px;
+      height: 42px;
+      width: 42px;
+      background-color: #ffffff3d;
+      border-radius: 50%;
+      transform: translateY(50%);
+    }
+
+    & span{
+      display: block;
+      position: absolute;
+      bottom: -83px;
+      right: 36px;
+      height: 71px;
+      width: 0;
+      border-left: 3px dashed #FF6433;
+    }
+
+  }
+
+  &__steps-info {}
+
+  &__steps-name {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: -0.96px;
+    margin-bottom: 8px;
+  }
+
+  &__steps-text {
+    width: 335px;
+    font-size: 18px;
+    line-height: 175%;
+    opacity: 0.6;
+  }
+}
+
+
+
+.heading__title {
+  max-width: 525px;
+  margin-bottom: 16px;
+}
+
+.heading__follow-text {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 28px;
+  opacity: 0.6;
+  margin-bottom: 32px;
 }
