--- a/public/index.css
+++ b/public/index.css
@@ -429,6 +429,7 @@ body {
 }
 .follow__inner-info {
   margin-right: 130px;
+  max-width: 525px;
 }
 .follow__inner-steps {
   display: flex;
@@ -488,7 +489,6 @@ body {
 }
 
 .heading__title {
-  max-width: 525px;
   margin-bottom: 16px;
 }
 
@@ -576,9 +576,75 @@ body {
   fill: #FF6433;
 }
 
-.heading__title {
+.brands__inner .heading__title {
   margin: 0 auto 31px auto;
   text-align: center;
+}
+
+.main__blog {
+  padding: 135px 0;
+}
+
+.blog__filter {
+  display: flex;
+  margin-bottom: 46px;
+}
+.blog__filter-item {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -0.96px;
+  margin-right: 30px;
+  transition: all 0.3s;
+}
+.blog__filter-item:hover {
+  color: #FF6433;
+}
+.blog__filter-item:last-child {
+  margin-right: 0;
+}
+.blog__card {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 606px);
+  row-gap: 64px;
+  column-gap: 32px;
+}
+.blog__card-link {
+  display: block;
+  height: 100%;
+  width: 100%;
+  transition: all 0.3s;
+}
+.blog__card-link:hover {
+  box-shadow: 0px 20px 20px 0px #dbdbdb;
+  transform: scale(1.03);
+}
+.blog__card-content {
+  display: flex;
+  flex-direction: column;
+}
+.blog__card-date {
+  color: #939191;
+  font-size: 16px;
+  line-height: 28px;
+  margin-top: 24px;
+}
+.blog__card-titel {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -0.96px;
+  margin: 16px 0;
+}
+.blog__card-text {
+  color: #232536;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.blog__title {
+  margin-bottom: 47px;
 }
 
 /*# sourceMappingURL=index.css.map */
