--- a/style/index.scss
+++ b/style/index.scss
@@ -407,6 +407,7 @@ body {
 
     &-info {
       margin-right: 130px;
+      max-width: 525px;
     }
 
     &-steps {
@@ -476,7 +477,6 @@ body {
 }
 
 .heading__title {
-  max-width: 525px;
   margin-bottom: 16px;
 }
 
@@ -567,8 +567,6 @@ body {
     justify-content: center;
   }
 
-  &__list-item {}
-
   &__list-link {
     display: block;
     height: 100%;
@@ -586,8 +584,87 @@ body {
   }
 }
 
-.heading__title {
+.brands__inner .heading__title {
   margin: 0 auto 31px auto;
   text-align: center;
 
+}
+
+// ====================BLOG=============================
+.main__blog {
+  padding: 135px 0;
+}
+
+.blog {
+
+  &__filter {
+    display: flex;
+    margin-bottom: 46px;
+
+    &-item {
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 48px;
+      letter-spacing: -0.96px;
+      margin-right: 30px;
+      @include transition;
+
+      &:hover {
+        color: #FF6433;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
+  &__card {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 606px);
+    row-gap: 64px;
+    column-gap: 32px;
+    &-link {
+      display: block;
+      height: 100%;
+      width: 100%;
+      @include transition;
+
+      &:hover {
+        box-shadow: 0px 20px 20px 0px #dbdbdb;
+        transform: scale(1.03);
+      }
+    }
+
+    &-content {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &-date {
+      color: #939191;
+      font-size: 16px;
+      line-height: 28px;
+      margin-top: 24px;
+    }
+
+    &-titel {
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 48px;
+      letter-spacing: -0.96px;
+      margin: 16px 0;
+    }
+
+    &-text {
+      color: #232536;
+      font-size: 16px;
+      line-height: 28px;
+    }
+  }
+}
+
+.blog__title {
+  margin-bottom: 47px;
 }
