--- a/style/index.scss
+++ b/style/index.scss
@@ -679,7 +679,6 @@ body {
 // ====================REVIEW=============================
 .review {
 
-  &__inner {}
 
   &__heading {
     max-width: 910px;
@@ -861,4 +860,111 @@ body {
 .main__review {
   padding: 128px 0 125px 0;
   background-color: #F2F2F2;
+}
+
+// ====================QUESTIONS=============================
+.questions {
+
+  &__heading {
+    margin-bottom: 86px;
+  }
+
+  &__acc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &-item {
+      background-color: #fff;
+      padding: 32px;
+      width: 895px;
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 12px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    &-content {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+
+
+    }
+
+    &-link {
+      width: 100%;
+      display: block;
+    }
+
+    &-link--active {
+      & .questions__acc-icon::before {
+        content: "";
+        transform: translateX(50%) rotate(0deg);
+        @include transition;
+      }
+    }
+
+    &-heading {
+      line-height: 36px;
+      letter-spacing: -0.72px;
+
+    }
+
+    &-text {
+      color: #939191;
+      font-size: 18px;
+      font-weight: 500;
+      line-height: 175%;
+      max-width: 695px;
+      display: none;
+      margin-top: 12px;
+    }
+
+    &-icon {
+      display: block;
+      height: 50px;
+      width: 50px;
+      background-color: #FF6433;
+      margin-left: 60px;
+      position: relative;
+
+      &::after {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        width: 17px;
+        height: 0;
+        border: #fff solid 1px;
+        border-radius: 2px;
+        transform: translateX(50%);
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        width: 17px;
+        height: 0;
+        border: #fff solid 1px;
+        border-radius: 2px;
+        transform: translateX(50%) rotate(90deg);
+        @include transition;
+      }
+    }
+
+  }
+
+
+}
+
+.main__questions {
+  padding: 128px 0;
+  background: #E2E6E9;
 }
