Доработанна секция contact

--- a/public/index.css
+++ b/public/index.css
@@ -876,9 +876,13 @@ body {
 }
 
 .main__contact-form {
-  padding-top: 120px;
+  padding: 120px 0 168px;
 }
 
+.contact-form {
+  background: url("../images/photo/footer.png") bottom left no-repeat;
+  background-size: 100% auto;
+}
 .contact-form__heading {
   margin-bottom: 48px;
   max-width: 450px;
