--- a/public/index.css
+++ b/public/index.css
@@ -141,6 +141,29 @@ body {
   text-align: center;
 }
 
+.form__info {
+  width: 480px;
+}
+.form__info-item {
+  margin-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+}
+.form__info-item:last-child {
+  margin-bottom: 0;
+}
+.form__info-name {
+  margin-bottom: 2px;
+  font-size: 16px;
+  line-height: 28px;
+  opacity: 0.7;
+}
+.form__link {
+  line-height: 36px;
+  letter-spacing: -0.72px;
+  text-wrap: nowrap;
+}
+
 .header__top-inner {
   width: 100%;
   display: flex;
@@ -896,15 +919,12 @@ body {
   margin-right: 141px;
   margin-bottom: 148px;
 }
-.contact-form__info {
-  width: 480px;
-}
 .contact-form__input {
   display: block;
   width: 100%;
   background-color: #F2F2F2;
   margin-bottom: 4px;
-  padding: 23px 40px;
+  padding: 26px 40px;
   border-radius: 2px;
 }
 .contact-form__input::placeholder {
@@ -918,25 +938,79 @@ body {
 .contact-form__input:last-of-type {
   margin-bottom: 48px;
 }
-.contact-form__info-item {
-  margin-bottom: 32px;
-}
-.contact-form__info-item:last-child {
-  margin-bottom: 0;
-}
-.contact-form__info-name {
-  margin-bottom: 2px;
-  font-size: 16px;
-  line-height: 28px;
-  opacity: 0.7;
-}
-.contact-form__link {
-  line-height: 36px;
-  letter-spacing: -0.72px;
-  text-wrap: nowrap;
-}
 .contact-form__map-box {
   margin: 0 auto;
+}
+
+.footer-top {
+  background: rgba(30, 27, 27, 0.9803921569);
+}
+.footer-top__inner {
+  display: flex;
+  justify-content: space-between;
+  padding: 128px 0;
+}
+.footer-top__heading {
+  margin-right: 30px;
+}
+.footer__heading {
+  color: #FFF;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 140%;
+  letter-spacing: -1.44px;
+  width: 460px;
+  margin-bottom: 64px;
+}
+.footer-top__social {
+  display: flex;
+}
+.footer-top__social-item {
+  margin-right: 24px;
+}
+.footer-top__social-item:last-of-type {
+  margin-right: 0;
+}
+.footer-top__info {
+  color: #FFF;
+}
+.footer-top__info-name {
+  font-size: 18px;
+  line-height: 175%;
+  opacity: 0.6;
+}
+
+.footer-bottom {
+  background-color: #1E1B1B;
+  padding: 65px 0;
+}
+.footer-bottom__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-bottom__nav-list {
+  color: #fff;
+  display: flex;
+  font-size: 16px;
+  line-height: 28px;
+}
+.footer-bottom__nav-item {
+  margin-right: 45px;
+}
+.footer-bottom__nav-item a {
+  transition: all 0.3s;
+}
+.footer-bottom__nav-item a:hover {
+  color: #FF6433;
+}
+.footer-bottom__nav-item:last-of-type {
+  margin-right: 0;
+}
+.footer-bottom__copyright {
+  color: #939191;
+  font-size: 16px;
+  line-height: 28px;
 }
 
 /*# sourceMappingURL=index.css.map */
